<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.worker.Login"
    tools:showIn="@layout/activity_login"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/LoginImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp"
        android:src="@drawable/wego_rabbit" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#003399" />

    <RelativeLayout
        android:id="@+id/editRel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!--宽度强制扩展
        高度显示控件-->
        <RelativeLayout
            android:id="@+id/accountRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:gravity="center_vertical">
            <!--距离上边框
            允许点击
            内容居中-->
            <!--android:layout_width="wrap_content"
            android:layout_height="wrap_content"-->
            <ImageView
                android:id="@+id/UserImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/login_user" />

            <EditText
                android:id="@+id/UserEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:layout_toRightOf="@id/UserImageView"
                android:hint="@string/UserHint"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/pwdRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/accountRel"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/PasswordImageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:src="@drawable/login_pwd"
                />

            <EditText
                android:id="@+id/PasswordEdittext"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dip"
                android:layout_toRightOf="@id/PasswordImageView"
                android:hint="@string/PasswordHint"
                android:textSize="15sp"
                android:inputType="textPassword"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/remembeRel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwdRel"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/rememberUserPwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/remenberUP" />
        </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />
</LinearLayout>
