<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.worker.TabPage"
    tools:showIn="@layout/activity_tab_page"
    android:orientation="vertical"
    android:background="@android:color/white">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >

            <FrameLayout
                android:id="@+id/tab_content"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.0"
                android:background="#77557799"
                />

            <RadioGroup
                android:id="@+id/tabs_rg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"

                >
                <RadioButton
                    android:id="@+id/tab_rb_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/tab1"
                    android:textColor="#000000"
                    android:textSize="@dimen/tab_text_size"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:singleLine="true"
                    android:checked="true"
                    android:background="@drawable/selector_tab_a"
                    />
                <RadioButton
                    android:id="@+id/tab_rb_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/tab2"
                    android:textColor="#000000"
                    android:textSize="@dimen/tab_text_size"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:singleLine="true"
                    android:background="@drawable/selector_tab_b"
                    />
                <RadioButton
                    android:id="@+id/tab_rb_c"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/tab3"
                    android:textColor="#000000"
                    android:textSize="@dimen/tab_text_size"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:singleLine="true"
                    android:background="@drawable/selector_tab_c"
                    />
                <RadioButton
                    android:id="@+id/tab_rb_d"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:text="@string/tab4"
                    android:textColor="#000000"
                    android:textSize="@dimen/tab_text_size"
                    android:layout_weight="1.0"
                    android:gravity="center"
                    android:singleLine="true"
                    android:background="@drawable/selector_tab_d"
                    />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>
